<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.shell88</groupId>
	<artifactId>bdd-videoannotator-java</artifactId>
	<version>0.1</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<name>${project.groupId}:${project.artifactId}</name>
	<description>Java-Adapters for using bdd_videoannotator-server on java-based BDD-Frameworks.</description>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Stefan Hell</name>
			<email>stefan88hell@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/shell88/bdd_videoannotator.git</connection>
		<developerConnection>scm:git:https://github.com/shell88/bdd_videoannotator.git</developerConnection>
		<url>https://github.com/shell88/bdd_videoannotator</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/shell88/bdd_videoannotator/issues</url>
	</issueManagement>
	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>[1.2.0,)</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>[1.2.0,)</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.0.26-beta</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.shell88</groupId>
			<artifactId>bdd-videoannotator-server</artifactId>
			<version>0.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>

			<!-- TODO: clean stub directory with $basedir/src.... -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>unpack</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>com.github.shell88</groupId>
									<artifactId>bdd-videoannotator-server</artifactId>
									<outputDirectory>${project.build.directory}/wsdl</outputDirectory>
									<includes>**\/*.xsd, **\/*.wsdl</includes>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jvnet.jax-ws-commons</groupId>
				<artifactId>jaxws-maven-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<id>generate-java-stubs</id>
						<phase>process-sources</phase>
						<goals>
							<goal>wsimport</goal>
						</goals>
						<configuration>
							<wsdlDirectory>target/wsdl/META-INF/wsdl</wsdlDirectory>
							<packageName>com.github.shell88.bddvideoannotator.stubjava</packageName>
							<verbose>true</verbose>
							<encoding>${project.build.sourceEncoding}</encoding>
							<keep>true</keep>
							<sourceDestDir>src/main/java</sourceDestDir>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>
					<argLine>-Duser.language=en</argLine>
					<argLine>-Xmx1024m</argLine>
					<argLine>-XX:MaxPermSize=256m</argLine>
					<argLine>-Dfile.encoding=UTF-8</argLine>
					<useFile>false</useFile>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>bind-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<charset>${project.build.sourceEncoding}</charset>
							<excludePackageNames>com.github.shell88.bddvideoannotator.stubjava</excludePackageNames>
							<show>private</show>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

	</build>
</project>